fixed background on mobile

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -79,7 +79,7 @@ body {
 .hero-container {
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
+  background-position: right center;
 }
 
 .hero-card {
